--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@
 }
 
 /*footer*/
+.container_F {
+  width: 111%;
+}
+
 .h3-foot {
   font-size: 2rem;
   font-family: "Red Hat Display", sans-serif;
@@ -89,10 +93,9 @@
   font-family: "Explora", cursive;
   font-family: "Great Vibes", cursive;
   display: flex;
-  padding-left: 3rem;
-  margin-left: 2rem;
   margin-bottom: 1rem;
   margin-top: 3rem;
+  padding-right: 10rem;
 }
 .nosotros_parra .col-sm-12 {
   margin-right: 4rem;
