--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -20,10 +20,11 @@
     font-family: "Explora", cursive;
     font-family: 'Great Vibes', cursive;
     display: flex;
-    padding-left: 3rem;
-    margin-left: 2rem;
+    // padding-left: 3rem;
+    // margin-left: 2rem;
     margin-bottom: 1rem;
     margin-top: 3rem;
+    padding-right: 10rem;
    
    
     .col-sm-12{
