--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -13,7 +13,7 @@
     font-family: 'Red Hat Display', sans-serif;
 }
 
-.nosotros_parra{
+.row_Nos{
     font-size: 2rem;
     font-family: "Amaranth", sans-serif;
   
@@ -44,6 +44,7 @@
     animation: anima_home 1.5s ease;
     animation-iteration-count:infinite;
 }
+
 /* Animacion*/
 
 
