--- a/css/style.css
+++ b/css/style.css
@@ -87,18 +87,16 @@
   font-family: "Red Hat Display", sans-serif;
 }
 
-.nosotros_parra {
+.row_Nos {
   font-size: 2rem;
-  font-family: "Amaranth", sans-serif;
   font-family: "Explora", cursive;
   font-family: "Great Vibes", cursive;
   display: flex;
-  margin-bottom: 1rem;
-  margin-top: 3rem;
-  padding-right: 10rem;
+  padding: 2rem 1rem;
+  justify-content: space-around;
 }
-.nosotros_parra .col-sm-12 {
-  margin-right: 4rem;
+.row_Nos .col_Nos {
+  padding: 1rem 1rem;
 }
 
 .containerr {
