--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -22,6 +22,7 @@
     justify-content: space-around;
     .col_Nos{
         padding: 1rem 1rem;
+        display: flex;
     }
 }
    
@@ -38,6 +39,7 @@
 .mt-3{
     animation: anima_home 1.5s ease;
     animation-iteration-count:infinite;
+    margin-left: 0.5rem;
 }
 
 /* Animacion*/
